registration logic complete

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ STRIPE_SECRET_KEY=your_stripe_secret_key_here
 # Other Configuration
 SECRET_KEY=your_secret_key_here
 DEBUG=true
+
+# Nodemailer Configuration
+PulseCareEmail=pulsecare39@gmail.com
+EmailPassword=dfrdgsyceijohrli
