--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=3000
 
 # Database Configuration
-MONGO_URI=mongodb+srv://Nishant:DoctorNishant@cluster0.c7vwwxg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://Nishant:DoctorNishant@cluster0.c7vwwxg.mongodb.net/PulseCare?retryWrites=true&w=majority&appName=Cluster0
 
 # API Keys
 GOOGLE_API_KEY=your_google_api_key_here
