--- a/.env
+++ b/.env
@@ -15,3 +15,6 @@ DEBUG=true
 # Nodemailer Configuration
 PulseCareEmail=pulsecare39@gmail.com
 EmailPassword=dfrdgsyceijohrli
+
+#JWT Secret
+JwtSecret=DoctorNishant
