--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
